@@ -293,3 +293,18 @@ tasks.register<JavaExec>("runDataSkewMitigationExperiment") {
         "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
     )
 }
+
+tasks.register<JavaExec>("runAqePartitionManagementExperiment") {
+    group = "spark"
+    description = "Run Module 1.5.9 AQE partition management experiment"
+
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set(
+        "com.shrikant.spark.partitioning.AqePartitionManagementExperiment"
+    )
+
+    jvmArgs(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+    )
+}
